--- a/index.html
+++ b/index.html
@@ -2,12 +2,29 @@
 <head>
   <title>no internet</title>
 </head>
+<style>
+#mydiv {
+  position: absolute;
+  z-index: 9;
+  background-color: #888888;
+  border: 1px solid #000000;
+  text-align: left;
+}
+
+#mydivheader {
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  background-color: #444444;
+  color: #ffffff;
+}
+</style>
 <body>
   <div>the internet is down.</div>
 <div style="color:#FFFFFF;">enter</div>
 <input id='banana' placeholder="enter a title"><input form='apple' placeholder="enter a description"><input type="submit" value="GO!" onclick="error()">
 <script type="text/javascript">
-function start() {
+function error() {
 var bananaInput = document.getElementById("title");
 var appleInput = document.getElementById("title");
 let div = document.createElement('div');
