--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>no internet simulator</title>
 </head>
 <body>
+<div id="dragonloadr" style="top: 0px; left: -1000px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragon2loadr" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Dragon⠀⠀⠀⠀⠀⠀⠀    </div><img src="https://github.com/rdgfb/rdgfb.github.io/blob/main/icon.png?raw=true" alt="A dragon" style="margin: 0 auto; display: block;"><input type="button" value="ok" onclick="exit3()" style="margin: 0 auto; display: block;"><input type="button" value="✖" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>
   <div>a silly site that doesn't need internet!!  </div>
   <div>useful for bad connections too!</div>
   <div> </div>
@@ -10,6 +11,11 @@
 <a>                          </a>
 <input type="button" value="✖" class="buttonStyle" style="position: relative; background-color: #000000; border: 1px solid #FFFFFF; color: #FFFFFF; font-size:10px; top: -3px; right: -118px; height: 20px; width: 20px;" onclick="exit2()">
 <input id='banana' placeholder="enter a title" type="text" style="border: 1px solid #000000" required><input id='apple' placeholder="enter a description" style="border: 1px solid #000000" required><input id='1' type="submit" value="GO!" style="border: 1px solid #000000; width: 31px;" onclick="error()">
+</form>
+<div> </div>
+<form id="3" onsubmit="return false;" style="border: 1px solid #000000; width: 325px; background-color: #000000; color: #FFFFFF;">Console
+<input id='console' placeholder="Type any command!" type="text" style="border: 1px solid #000000; width: 240px" required>
+<input id='4' type="button" value="▶" class="buttonStyle" style="position: relative; background-color: #000000; border: 2px solid #FFFFFF; color: #FFFFFF; font-size:9px; top: -1px; right: 0px; height: 18px; width: 18px;" onclick="enter()">
 </form>
 <script type="text/javascript">
 function dragElement(elmnt) {
@@ -59,7 +65,7 @@ let div = document.createElement('div');
 if (banana == "" || apple == "") {
 } else {
 	div.id = 'content';
-	div.innerHTML = '<div id="dragon" style="top: 0px; left: 0px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">title</div><div id="dragondescription">description</div><input type="button" value="ok" onclick="exit()" style="margin: 0 auto; display: block;"><input type="button" value="✖" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit()"></div>';
+	div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">title</div><div id="dragondescription">description</div><input type="button" value="ok" onclick="exit()" style="margin: 0 auto; display: block;"><input type="button" value="✖" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit()"></div>';
 	document.body.appendChild(div);
 	dragElement(document.getElementById("dragon"));
 	document.getElementById("dragonheader").innerHTML = "᠎᠎ "+banana+"᠎⠀ ⠀";
@@ -84,9 +90,40 @@ document.getElementById("banana").placeholder = "enter a title";
 document.getElementById("apple").placeholder = "enter a description";
 document.getElementById("1").value = "GO!";
 }
+function exit3() {
+var x = document.getElementById("dragon");
+x.remove();
+document.getElementById("4").disabled = false;
+document.getElementById("console").disabled = false;
+document.getElementById("console").placeholder = "Type any command!";
+}
 function exit2() {
 var q = document.getElementById("2");
 q.remove();
+}
+function enter() {
+	let div = document.createElement('div');
+	var consoleID = document.getElementById("console").value;
+	if (consoleID == "dragon") {
+		div.id = 'content';
+		div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Dragon⠀⠀⠀⠀⠀⠀⠀    </div><img src="https://github.com/rdgfb/rdgfb.github.io/blob/main/icon.png?raw=true" alt="A dragon" style="margin: 0 auto; display: block;"><input type="button" value="ok" onclick="exit3()" style="margin: 0 auto; display: block;"><input type="button" value="✖" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
+		document.body.appendChild(div);
+		dragElement(document.getElementById("dragon"));
+    document.getElementById("4").disabled = true;
+		document.getElementById("console").disabled = true;
+		document.getElementById("console").placeholder = " ";
+  	document.getElementById("console").value = "";
+	} else if (consoleID !== "") {
+		div.id = 'content';
+		div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Error!</div> <div id="dragondescription">Invalid command.</div><input type="button" value="✖" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
+		document.body.appendChild(div);
+		dragElement(document.getElementById("dragon"));
+    document.getElementById("4").disabled = true;
+		document.getElementById("console").disabled = true;
+		document.getElementById("console").placeholder = " ";
+  	document.getElementById("console").value = "";
+	} else {
+  }
 }
 </script>
 </body>
