--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>no internet simulator</title>
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/siteicon.png">
 </head>
 <body>
 <div id="dragonloadr" style="top: 0px; left: -1000px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragon2loadr" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Dragon⠀⠀⠀⠀⠀⠀⠀    </div><img src="https://github.com/rdgfb/rdgfb.github.io/blob/main/icon.png?raw=true" alt="A dragon" style="margin: 0 auto; display: block;"><input type="button" value="ok" onclick="exit3()" style="margin: 0 auto; display: block;"><input type="button" value="✖" style="position: absolute; font-size: 10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()" hidden></div>
