--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html><head>
   <title>Dragon v0.2</title>
-  <link rel="icon" type="image/x-icon" href="https://github.com/rdgfb/rdgfb.github.io/blob/main/icon.png?raw=true">
+  <link rel="icon" type="image/x-icon" style="detect" href="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon1-light.png">
 </head>
 <body id="body">
-<img src="https://github.com/rdgfb/rdgfb.github.io/blob/main/icon.png?raw=true" alt="A dragon" style="margin: 0 auto; display: none;">
+<img src="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icon.png" alt="A dragon" style="margin: 0 auto; display: none;">
 <div id="7" style="position:fixed; bottom:0; border: 1px solid #000000; width: 52px; background-color: #000000; color: #FFFFFF; display: none">cmd<input type="button" value="☐" style="padding: 0px 6px 4px 4px; vertical-align: middle; text-align: center; position: relative; background-color: #000000; border: 2px solid #FFFFFF; color: #FFFFFF; font-size:8px; top: -1px; right: -5px; height: 18px; width: 18px;" onclick="maximize()"></div>
   <div>a silly site that doesn't need internet!!  </div>
   <div>useful for bad connections too!</div>
@@ -17,6 +17,32 @@
     <div id="content"></div>
 <script type="text/javascript">
 let debug = 0;
+let icon = 1;
+var link = document.querySelector("link[rel~='icon']");
+if (!link) {
+    link = document.createElement('link');
+    link.rel = 'icon';
+    document.getElementsByTagName('head')[0].appendChild(link);
+}
+if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+if (icon == 1) {
+link.href = 'https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon1-dark.png';
+} else if (icon == 2) {
+	link.href = 'https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon2-dark.png';
+} else {
+if (icon == 1) {
+link.href = 'https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon1-light.png';
+} else if (icon == 2) {
+	link.href = 'https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon2-light.png';
+}
+}
+var link = document.querySelector("link[rel~='icon']");
+if (!link) {
+    link = document.createElement('link');
+    link.rel = 'icon';
+    document.getElementsByTagName('head')[0].appendChild(link);
+}
+}
 function dragElement(elmnt) {
   var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
   if (document.getElementById(elmnt.id + "header")) {
@@ -221,7 +247,7 @@ document.getElementById("console").placeholder = " ";
   document.getElementById("console").value = "";
   }
   } else if (consoleID == "about") {
-document.getElementById("3").innerHTML += '<form id="dragon" onsubmit="return false;" style="border: 1px solid #000000; width: 325px; background-color: #000000; color: #FFFFFF;"><img src="https://github.com/rdgfb/rdgfb.github.io/blob/main/icon.png?raw=true" alt="🐲" style="position: absolute; width: 20px; length: 20px; top: 22px"> ⠀&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;about Dragon<input type="button" value="X" class="buttonStyle" style="position: relative; background-color: #000000; border: 1px solid #FFFFFF; color: #FFFFFF; font-size:10px; top: -2px; right: -197px; height: 20px; width: 20px;" onclick="exit2()"><div id="dragondescription">Dragon v0.2, developed by rdgfb.</div></form>';
+document.getElementById("3").innerHTML += '<form id="dragon" onsubmit="return false;" style="border: 1px solid #000000; width: 325px; background-color: #000000; color: #FFFFFF;"><img src="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon2-light.png" alt="🐲" style="position: absolute; width: 20px; length: 20px; top: 22px"> ⠀&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;about Dragon<input type="button" value="X" class="buttonStyle" style="position: relative; background-color: #000000; border: 1px solid #FFFFFF; color: #FFFFFF; font-size:10px; top: -2px; right: -197px; height: 20px; width: 20px;" onclick="exit2()"><div id="dragondescription">Dragon v0.2, developed by rdgfb.</div></form>';
 document.body.appendChild(div);
     document.getElementById("4").disabled = true;
     document.getElementById("5").disabled = true;
@@ -276,6 +302,12 @@ dragElement(document.getElementById("dragon"));
 document.getElementById("console").disabled = true;
 document.getElementById("console").placeholder = " ";
   document.getElementById("console").value = "";
+} else if (consoleID == "icon") {
+if (icon == 1) {
+	icon = 2
+} else if (icon == 2) {
+	icon = 1
+}
 } else if (consoleID !== "") {
 div.id = 'content';
 div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Error!</div> <div id="dragondescription">Invalid command.</div><input type="button" value="OK" onclick="exit3()" style="margin: 0 auto; display: block;"><input type="button" value="X" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
