--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head>
+<!DOCTYPE html><head>
   <title>Dragon v0.2</title>
   <link rel="icon" type="image/x-icon" style="detect" href="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon1-light.png">
 </head>
