--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 </head>
 <body id="body">
 <img src="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icon.png" alt="A dragon" style="margin: 0 auto; display: none;">
+<img src="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon2-light.png" alt="A dragon" style="margin: 0 auto; display: none;">
+<img src="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon2-dark.png" alt="A dragon" style="margin: 0 auto; display: none;">
 <div id="7" style="position:fixed; bottom:0; border: 1px solid #000000; width: 52px; background-color: #000000; color: #FFFFFF; display: none">cmd<input type="button" value="☐" style="padding: 0px 6px 4px 4px; vertical-align: middle; text-align: center; position: relative; background-color: #000000; border: 2px solid #FFFFFF; color: #FFFFFF; font-size:8px; top: -1px; right: -5px; height: 18px; width: 18px;" onclick="maximize()"></div>
   <div>a silly site that doesn't need internet!!  </div>
   <div>useful for bad connections too!</div>
