--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <link rel="icon" type="image/x-icon" style="detect" href="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon1-light.png">
 </head>
 <body id="body">
+<audio id="a">
+  <source src="https://ia601000.us.archive.org/35/items/windowsxpstartup_201910/Windows%20XP%20Exclamation.mp3" type="audio/mp3">
+ </audio>
+ <audio id="b">
+  <source src="https://ia601000.us.archive.org/35/items/windowsxpstartup_201910/Windows%20Pop-up%20Blocked.mp3" type="audio/mp3">
+</audio>
 <img src="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icon.png" alt="A dragon" style="margin: 0 auto; display: none;">
 <img src="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon2-light.png" alt="A dragon" style="margin: 0 auto; display: none;">
 <img src="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon2-dark.png" alt="A dragon" style="margin: 0 auto; display: none;">
@@ -18,6 +24,10 @@
 </form>
     <div id="content"></div>
 <script type="text/javascript">
+var a = document.getElementById("a"); 
+var b = document.getElementById("b");
+a.play()
+b.play()
 let debug = 0;
 let icon = 1;
 var link = document.querySelector("link[rel~='icon']");
@@ -92,6 +102,7 @@ if (banana == "" || apple == "") {
 } else {
 div.id = 'content';
 div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">title</div><div id="dragondescription">description</div><input type="button" value="OK" onclick="exit()" style="margin: 0 auto; display: block;"><input type="button" value="X" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit()"></div>';
+a.play();
 document.body.appendChild(div);
 dragElement(document.getElementById("dragon"));
 document.getElementById("dragonheader").innerHTML = "᠎᠎ "+banana+"᠎⠀ ⠀";
@@ -156,7 +167,7 @@ function maximize() {
   document.getElementById("7").style.display = "none";
 }
 function help() {
-document.getElementById("3").innerHTML += '<div id="2" style="border: 1px solid #000000; width: 325px; background-color: #000000; color: #FFFFFF;">Help<input type="button" value="X" class="buttonStyle" style="position: relative; background-color: #000000; border: 1px solid #FFFFFF; color: #FFFFFF; font-size:10px; top: -3px; right: -274px; height: 20px; width: 20px;" onclick="exit2()"><div>&hairsp;</div><div style="color: #FFFFFF;">Type in commands in the box.</div><a style="color: #FFFFFF;">For the list of commands, type or click </a><input type="button" value="cmds" class="buttonStyle" style="position: relative; background-color: transparent; border: 0px solid #FFFFFF; color: #FFFFFF; font-size:14px; top: 0px; right: 2px; height: 20px; width: 37px;" onclick="typehelp()"><a>!</a></div>';
+document.getElementById("3").innerHTML += '<div id="2" style="border: 1px solid #000000; width: 325px; background-color: #000000; color: #FFFFFF;">Help<input type="button" value="X" class="buttonStyle" style="position: relative; background-color: #000000; border: 2px solid #FFFFFF; color: #FFFFFF; font-size:10px; top: -21px; right: -260px; height: 18px; width: 18px;" onclick="exit2()"><div>&hairsp;</div><div style="color: #FFFFFF;">Type in commands in the box.</div><a style="color: #FFFFFF;">For the list of commands, type or click </a><input type="button" value="cmds" class="buttonStyle" style="position: relative; background-color: transparent; border: 0px solid #FFFFFF; color: #FFFFFF; font-size:14px; top: 0px; right: 2px; height: 20px; width: 37px;" onclick="typehelp()"><a>!</a></div>';
     document.getElementById("4").disabled = true;
     document.getElementById("5").disabled = true;
 document.getElementById("console").disabled = true;
@@ -214,6 +225,7 @@ document.getElementById("console").placeholder = " ";
 if (debug == 1){
 div.id = 'content';
 div.innerHTML = '<div id="dragon" style="top: 40%; left: 40%; position: absolute; z-index: 9; background-color: rgb(136, 136, 136); border: 1px solid rgb(0, 0, 0); text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Warning!</div> <div id="dragondescription" style="max-width: 325px; min-width: 325px;">You are trying to activate a secret that MAY trigger photosensitive people, if it works. If it does, it will be like a disco. If not, it will crash the page. Press "No!" to back out. Otherwise, have fun probably crashing! ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</div><input type="button" value="CRASH!" onclick="rapid()" style="position: relative; right: -100px"><input type="button" value="No!" onclick="exit3()" style="position: relative; right: -150px"><input type="button" value="X" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
+a.play();
         document.body.appendChild(div);
 dragElement(document.getElementById("dragon"));
     document.getElementById("4").disabled = true;
@@ -225,6 +237,7 @@ document.getElementById("console").placeholder = " ";
   } else {
   div.id = 'content';
 div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Error!</div> <div id="dragondescription">Invalid command.</div><input type="button" value="OK" onclick="exit3()" style="margin: 0 auto; display: block;"><input type="button" value="X" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
+a.play();
 document.body.appendChild(div);
 dragElement(document.getElementById("dragon"));
     document.getElementById("4").disabled = true;
@@ -235,7 +248,7 @@ document.getElementById("console").placeholder = " ";
   document.getElementById("console").value = "";
   }
   } else if (consoleID == "about") {
-document.getElementById("3").innerHTML += '<form id="dragon" onsubmit="return false;" style="border: 1px solid #000000; width: 325px; background-color: #000000; color: #FFFFFF;"><img src="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon2-light.png" alt="🐲" style="position: absolute; width: 20px; length: 20px; top: 22px"> ⠀&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;about Dragon<input type="button" value="X" class="buttonStyle" style="position: relative; background-color: #000000; border: 1px solid #FFFFFF; color: #FFFFFF; font-size:10px; top: -2px; right: -197px; height: 20px; width: 20px;" onclick="exit2()"><div id="dragondescription">Dragon v0.2, developed by rdgfb.</div></form>';
+document.getElementById("3").innerHTML += '<form id="dragon" onsubmit="return false;" style="border: 1px solid #000000; width: 325px; background-color: #000000; color: #FFFFFF;"><img src="https://raw.githubusercontent.com/rdgfb/rdgfb.github.io/main/icons/dragon2-light.png" alt="🐲" style="position: absolute; width: 20px; length: 20px; top: 22px"> ⠀&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;Dragon<input type="button" value="X" class="buttonStyle" style="position: relative; background-color: #000000; border: 1px solid #FFFFFF; color: #FFFFFF; font-size:10px; top: -2px; right: -238px; height: 20px; width: 20px;" onclick="exit2()"><div id="dragondescription">Developed by rdgfb.</div></form>';
 document.body.appendChild(div);
     document.getElementById("4").disabled = true;
     document.getElementById("5").disabled = true;
@@ -261,7 +274,7 @@ document.getElementById("console").placeholder = " ";
 } else if (consoleID == "aboutold") {
 if (debug == 1){
 div.id = 'content';
-div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;"><img src="https://github.com/rdgfb/rdgfb.github.io/blob/main/icon.png?raw=true" alt="🐲" style="position: absolute; width: 20px; length: 20px">⠀⠀About Dragon⠀&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;</div><div id="dragondescription">Dragon. v0.1</div><input type="button" value="ok" onclick="exit3()" style="margin: 0 auto; display: block;"><input type="button" value="X" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
+div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;"><img src="https://github.com/rdgfb/rdgfb.github.io/blob/main/icon.png?raw=true" alt="🐲" style="position: absolute; width: 20px; length: 20px">⠀⠀Dragon⠀&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;</div><div id="dragondescription">Dragon. v0.1</div><input type="button" value="ok" onclick="exit3()" style="margin: 0 auto; display: block;"><input type="button" value="X" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
 document.body.appendChild(div);
 dragElement(document.getElementById("dragon"));
     document.getElementById("4").disabled = true;
@@ -270,6 +283,7 @@ document.getElementById("console").placeholder = " ";
   document.getElementById("console").value = "";
   } else {
   div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Error!</div> <div id="dragondescription">Invalid command.</div><input type="button" value="OK" onclick="exit3()" style="margin: 0 auto; display: block;"><input type="button" value="X" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
+  a.play();
 document.body.appendChild(div);
 dragElement(document.getElementById("dragon"));
     document.getElementById("4").disabled = true;
@@ -281,7 +295,8 @@ document.getElementById("console").placeholder = " ";
   }
 } else if (consoleID == "debug") {
 div.id = 'content';
-div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Debug</div> <div id="dragondescription">Would you like to use debug commands?</div><input type="button" value="YES!" onclick="activate()" style="position: relative; right: -100px"><input type="button" value="No!" onclick="deactivate()" style="position: relative; right: -150px"></div>';
+div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Debug</div> <div id="dragondescription">Would you like to use debug commands?</div><input type="button" value="YES!" onclick="activate()" style="position: relative; right: -73px"><input type="button" value="No!" onclick="deactivate()" style="position: relative; right: -125px"></div>';
+a.play();
 document.body.appendChild(div);
 dragElement(document.getElementById("dragon"));
     document.getElementById("4").disabled = true;
@@ -293,6 +308,7 @@ document.getElementById("console").placeholder = " ";
 } else if (consoleID !== "") {
 div.id = 'content';
 div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Error!</div> <div id="dragondescription">Invalid command.</div><input type="button" value="OK" onclick="exit3()" style="margin: 0 auto; display: block;"><input type="button" value="X" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
+a.play();
 document.body.appendChild(div);
 dragElement(document.getElementById("dragon"));
     document.getElementById("4").disabled = true;
@@ -302,6 +318,7 @@ document.getElementById("console").disabled = true;
 document.getElementById("console").placeholder = " ";
   document.getElementById("console").value = "";
 } else {
+b.play();
   }
 }
 </script>
