--- a/pressing/notacookieclickerripoff.html
+++ b/pressing/notacookieclickerripoff.html
@@ -552,15 +552,15 @@ eload=(11.5*clickpower)
 e=(e*eload)
 cursorupgrade=getCookie("cursorupgrade");
 if (cursorupgrade == 1) {
-pps=(cursor*0.5))
+pps=(cursor*0.5)
 } else if (cursorupgrade == 2) {
-pps=(cursor*2.5))
+pps=(cursor*2.5)
 } else if (cursorupgrade == 3) {
-pps=(cursor*10))
+pps=(cursor*10)
 } else if (cursorupgrade == 4) {
-pps=(cursor*50))
+pps=(cursor*50)
 } else if (cursorupgrade == 5) {
-pps=(cursor*100))
+pps=(cursor*100)
 } else {
 pps=(cursor*0.1)
 }
