--- a/pressing/notacookieclickerripoff.html
+++ b/pressing/notacookieclickerripoff.html
@@ -566,37 +566,37 @@ pps=(cursor*0.1)
 }
 }
     function clickupgrade(){
-        if (i >= 5000 && cursorupgrade=0) {
+        if (i > 4999 && cursorupgrade==0) {
         i=i-5000
         style()
         cursorupgrade=1
         document.getElementById("cursor1").innerText="Cursor II"
         document.getElementById("cucust").innerText="10k"
-        } else if (i >= 10000 && cursorupgrade=1) {
+        } else if (i > 9999 && cursorupgrade==1) {
         i=i-10000
         style()
         cursorupgrade=2
         document.getElementById("cursor1").innerText="Cursor III"
         document.getElementById("cucust").innerText="25k"
-        } else if (i >= 25000 && cursorupgrade=2) {
+        } else if (i > 24999 && cursorupgrade==2) {
         i=i-25000
         style()
         cursorupgrade=3
         document.getElementById("cursor1").innerText="Cursor IV"
         document.getElementById("cucust").innerText="50k"
-        } else if (i >= 50000 && cursorupgrade=3) {
+        } else if (i > 49999 && cursorupgrade==3) {
         i=i-50000
         style()
         cursorupgrade=4
         document.getElementById("cursor1").innerText="Cursor V"
         document.getElementById("cucust").innerText="100k"
-        } else if (i >= 100000 && cursorupgrade=4) {
+        } else if (i > 99999 && cursorupgrade==4) {
         i=i-100000
         style()
         cursorupgrade=5
         document.getElementById("cursor1").innerText="MAXED!"
         document.getElementById("cucust").innerText="0"
-        } else if (cursorupgrade = 5) {
+        } else if (cursorupgrade == 5) {
         }
         }
     </script>
