--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
   <source src="https://ia601000.us.archive.org/35/items/windowsxpstartup_201910/Windows%20Pop-up%20Blocked.mp3" type="audio/mp3">
 </audio>
 <div class="fullscreen-bg">
-    <video id="winter" loop muted autoplay class="fullscreen-bg__video" style="display: none">
+    <video id="winter" width="100%" height="auto" loop muted autoplay class="fullscreen-bg__video" style="display: none">
         <source src="/icons/winter.mp4" type="video/mp4">
     </video>
 </div>
 <div class="fullscreen-bg">
-    <video id="spring"  loop muted autoplay class="fullscreen-bg__video" style="display: none">
+    <video id="spring" width="100%" height="auto" loop muted autoplay class="fullscreen-bg__video" style="display: none">
         <source src="/icons/spring.mp4" type="video/mp4">
     </video>
 </div>
 <div class="fullscreen-bg">
-    <video id="summer" loop muted autoplay class="fullscreen-bg__video" style="display: none">
+    <video id="summer" width="100%" height="auto" loop muted autoplay class="fullscreen-bg__video" style="display: none">
         <source src="/icons/summer.mp4" type="video/mp4">
     </video>
 </div>
