--- a/index.html
+++ b/index.html
@@ -81,6 +81,21 @@
     <div id="content"></div>
 <script type="text/javascript">
 let visit = getCookie("background");
+let lastversion = getCookie("build");
+if (lastversion != 0.4) {
+let div = document.createElement('div');
+div.id = 'content';
+div.innerHTML = '<div id="dragon" style="top: 100px; left: 145px; position: absolute; z-index: 9; max-width: 250px; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">new version bro</div> <div id="dragondescription">v0.4, background saves now!! backgrounds are FIXED! no more boring gray or white!!</div><input type="button" value="Close." onclick="exit3()" style="margin: 0 auto; display: block;"><input type="button" value="X" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
+document.body.appendChild(div);
+dragElement(document.getElementById("dragon"));
+document.getElementById("4").disabled = true;
+document.getElementById("5").disabled = true;
+document.getElementById("6").disabled = true;
+document.getElementById("console").disabled = true;
+document.getElementById("console").placeholder = " ";
+document.getElementById("console").value = "";
+document.cookie = "background="+visit+"; build=0.4; expires=31 Dec 2099 12:00:00 UTC path=/"; 
+}
 if (visit == 1) {
 still=0
 setseasonal()
@@ -271,10 +286,10 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
 }
 }
 function resettext(){
-	document.getElementById("titletext").value="Dragon v0.3"
+	document.getElementById("titletext").value="Dragon v0.4"
 }
 function gray(){
-document.cookie = "background=4; expires=31 Dec 2099 12:00:00 UTC path=/"; 
+document.cookie = "background=4; build=0.4; expires=31 Dec 2099 12:00:00 UTC path=/"; 
 setgray()
 }
 function setgray(){
@@ -284,7 +299,7 @@ document.getElementById("spring").style="display: none;"
 document.getElementById("summer").style="display: none;"
 }
 function white(){
-document.cookie = "background=3; expires=31 Dec 2099 12:00:00 UTC path=/"; 
+document.cookie = "background=3; build=0.4; expires=31 Dec 2099 12:00:00 UTC path=/"; 
 setwhite()
 }
 function setwhite(){
@@ -294,12 +309,12 @@ document.getElementById("spring").style="display: none;"
 document.getElementById("summer").style="display: none;"
 }
 function seasonal0(){
-document.cookie = "background=1; expires=31 Dec 2099 12:00:00 UTC path=/"; 
+document.cookie = "background=1; build=0.4; expires=31 Dec 2099 12:00:00 UTC path=/"; 
 still=0
 setseasonal()
 }
 function seasonal1(){
-document.cookie = "background=2; expires=31 Dec 2099 12:00:00 UTC path=/"; 
+document.cookie = "background=2; build=0.4; expires=31 Dec 2099 12:00:00 UTC path=/"; 
 still=1
 setseasonal()
 }
@@ -495,7 +510,7 @@ document.getElementById("console").placeholder = " ";
   document.getElementById("console").value = "";
   }
   } else if (consoleID == "about") {
-document.getElementById("3").innerHTML += '<form id="dragon" onsubmit="return false;" style="border: 1px solid #000000; width: 325px; background-color: #000000; color: #FFFFFF;"><img src="/icons/dragon2-light.png" alt="🐲" style="position: absolute; width: 20px; length: 20px; top: 22px"> ⠀&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;Dragon v0.3<input type="button" value="X" class="buttonStyle" style="position: relative; background-color: #000000; border: 1px solid #FFFFFF; color: #FFFFFF; font-size:10px; top: -2px; right: -205px; height: 20px; width: 20px;" onclick="exit2()"><div id="dragondescription">Developed by rdgfb.</div>⠀<div></div><div>a silly site that doesn\'t need internet!!</div><div>useful for bad connections too!</div></form>';
+document.getElementById("3").innerHTML += '<form id="dragon" onsubmit="return false;" style="border: 1px solid #000000; width: 325px; background-color: #000000; color: #FFFFFF;"><img src="/icons/dragon2-light.png" alt="🐲" style="position: absolute; width: 20px; length: 20px; top: 22px"> ⠀&hairsp;&hairsp;&hairsp;&hairsp;&hairsp;Dragon v0.4<input type="button" value="X" class="buttonStyle" style="position: relative; background-color: #000000; border: 1px solid #FFFFFF; color: #FFFFFF; font-size:10px; top: -2px; right: -205px; height: 20px; width: 20px;" onclick="exit2()"><div id="dragondescription">Developed by rdgfb.</div>⠀<div></div><div>a silly site that doesn\'t need internet!!</div><div>useful for bad connections too!</div></form>';
 document.body.appendChild(div);
     document.getElementById("4").disabled = true;
     document.getElementById("5").disabled = true;
@@ -573,7 +588,7 @@ document.getElementById("console").placeholder = " ";
 } else if (consoleID == "variable") {
 div.id = 'content';
 if (debug == 1){
-div.innerHTML = '<div id="dragon" style="width: 350px; max-width: 350px; min-width: 350px; top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="width:400; padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Value editor</div> <a id="dragondescription">Debug: access more commands. </a><input id="debug" type="text" min=0 max=1 value="1" style="width: 290px;" disabled><input type="button" value="RESET" onclick="resetdebug()" disabled><div></div><a id="dragondescription">volume_sound_a: error sound volume. </a><input id="volume_sound_a" min=0 max=100  type="range" value="100" style="width: 290px"><input type="button" value="RESET" onclick="resetsounda()"><div></div><a id="dragondescription">volume_sound_b: no input sound volume. </a><input id="volume_sound_b" min=0 max=100 type="range" value="100" style="width: 290px;"><input type="button" value="RESET" onclick="resetsoundb()"><div></div><a id="dragondescription">titleicon: icon for tab. (requires internet) </a><input id="titleicon" type="text" style="width: 290px;"><input type="button" value="RESET" onclick="reseticon()"><div></div><a id="dragondescription">titletext: the title of the tab. </a><input id="titletext" type="text" value="Dragon v0.3" style="width: 290px;"><input type="button" value="RESET" onclick="resettext()"><div>⠀</div><input type="button" value="APPLY!" onclick="apply()" style="width: 350px"><div></div><input type="button" value="X" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
+div.innerHTML = '<div id="dragon" style="width: 350px; max-width: 350px; min-width: 350px; top: 100px; left: 145px; position: absolute; z-index: 9; background-color: #888888; border: 1px solid #000000; text-align: left;"><div id="dragonheader" style="width:400; padding: 1px; cursor: move; z-index: 10; background-color: #444444; color: #ffffff;">Value editor</div> <a id="dragondescription">Debug: access more commands. </a><input id="debug" type="text" min=0 max=1 value="1" style="width: 290px;" disabled><input type="button" value="RESET" onclick="resetdebug()" disabled><div></div><a id="dragondescription">volume_sound_a: error sound volume. </a><input id="volume_sound_a" min=0 max=100  type="range" value="100" style="width: 290px"><input type="button" value="RESET" onclick="resetsounda()"><div></div><a id="dragondescription">volume_sound_b: no input sound volume. </a><input id="volume_sound_b" min=0 max=100 type="range" value="100" style="width: 290px;"><input type="button" value="RESET" onclick="resetsoundb()"><div></div><a id="dragondescription">titleicon: icon for tab. (requires internet) </a><input id="titleicon" type="text" style="width: 290px;"><input type="button" value="RESET" onclick="reseticon()"><div></div><a id="dragondescription">titletext: the title of the tab. </a><input id="titletext" type="text" value="Dragon v0.4" style="width: 290px;"><input type="button" value="RESET" onclick="resettext()"><div>⠀</div><input type="button" value="APPLY!" onclick="apply()" style="width: 350px"><div></div><input type="button" value="X" style="position:absolute; font-size:10px; top:0; right:0; height: 20px; width: 20px;" onclick="exit3()"></div>';
 document.body.appendChild(div);
 dragElement(document.getElementById("dragon"));
     document.getElementById("4").disabled = true;
