--- a/mario/index.html
+++ b/mario/index.html
@@ -3,6 +3,7 @@
 </head>
 <body>
 <p style="position: relative; text-align: center; top: 10px">mario requires internet explorer 11</p>
+<p style="position: relative; text-align: center; top: 25px"><a href="mario.html">if you are on internet explorer 11, and set the correct settings, click here to enter</a></p>
 <p style="position: relative; text-align: center; top: 40px">also, you need specific settings. see video for instructions</p>
 <video style="width: 90%; length: 90%; position: relative; text-align: center; top: 40px" controls>
   <source src="instructions.mp4" type="video/mp4">
