--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <p style="position: absolute; left: 5px; top: 40px">list of stuff:</p>
 <p style="position: absolute; left: 5px; top: 55px"><a href="/mario/index.html">Mario steals your liver (IE11 EXCLUSIVE, uses popups)</a></p>
 <p style="position: absolute; left: 5px; top: 70px"><a href="/dragon/index.html">dragon</a></p>
-<p style="position: absolute; left: 5px; top: 85px"><a href="/pressing/notacookieclickerripoff.html">pressing (doesn't save yet)</a></p>
+<p style="position: absolute; left: 5px; top: 85px"><a href="/pressing/index.html">pressing (doesn't save yet)</a></p>
 <p style="position: absolute; left: 5px; top: 100px"><a href="/">more coming soon...</a></p>
 </body>
