--- a/pressing/index.html
+++ b/pressing/index.html
@@ -4,6 +4,7 @@
 <body>
 <p style="position: absolute; left: 5px; top: 10px">pressing</p>
 <p style="position: absolute; left: 5px; top: 40px">what version?</p>
-<p style="position: absolute; left: 5px; top: 55px"><a href="/pressing/v0.2/index.html">v0.2 (latest)</a></p>
-<p style="position: absolute; left: 5px; top: 70px"><a href="/pressing/v0.1/notacookieclickerripoff.html">v0.1</a></p>
+<p style="position: absolute; left: 5px; top: 55px"><a href="/pressing/v0.2b/index.html">v0.2b (latest)</a></p>
+<p style="position: absolute; left: 5px; top: 70px"><a href="/pressing/v0.2a/index.html">v0.2a (broken)</a></p>
+<p style="position: absolute; left: 5px; top: 85px"><a href="/pressing/v0.1/notacookieclickerripoff.html">v0.1</a></p>
 </body>
