--- a/Encourage/index.html
+++ b/Encourage/index.html
@@ -7,9 +7,9 @@
 }
 
 .sliding-background {
-  background: url("/background.png") repeat-x;
-  height: 4096px;
-  width: 4096px;
+  background: url("/Encourage/background.png") repeat-x;
+  height: 2048px;
+  width: 2048px;
   top: 0px;
   left: 0px;
   position: absolute;
