--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <p style="position: absolute; left: 5px; top: 70px"><a href="/dragon/index.html">dragon</a></p>
 <p style="position: absolute; left: 5px; top: 85px"><a href="/pressing/index.html">pressing (doesn't save yet)</a></p>
 <p style="position: absolute; left: 5px; top: 100px"><a href="/blog page/index.html">blog page</a></p>
-<p style="position: absolute; left: 5px; top: 115px"><a href="/Encourage/index.html">get encouraged!</a></p>
+<p style="position: absolute; left: 5px; top: 115px"><a href="/Encourage/">get encouraged!</a></p>
 <p style="position: absolute; left: 5px; top: 130px"><a href="/">more coming soon... this is getting fuller and fuller!</a></p>
 </body>
