--- a/presentation/index.html
+++ b/presentation/index.html
@@ -1,7 +1,7 @@
 <head>
 <title>present</title>
 </head>
-<body>
+<body style="overflow: hidden; background-color: #7F7F7F;">
 <div id="viewdimension" style="position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background-color: #7F7F7F">
 <div id="unsupported" style="position: absolute; top: 0px; left: 0px; font-size: 100%;"></div>
 <a id="device" style="position: absolute; top: 0px; left: 0px; font-size: 5vw;">Your device: detecting...</a>
