--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <p style="position: absolute; left: 5px; top: 100px"><a href="/blog page/index.html">blog page</a></p>
 <p style="position: absolute; left: 5px; top: 115px"><a href="/Encourage/">get encouraged!</a></p>
 <p style="position: absolute; left: 5px; top: 130px"><a href="/presentin/">presenting time</a></p>
-<p style="position: absolute; left: 5px; top: 145px"><a href="/presentation/">presentation, mobile compatible</a></p>
+<p style="position: absolute; left: 5px; top: 145px"><a href="/">find the code, bro. no cheating. none of these are what you're lookin for</a></p>
 <p style="position: absolute; left: 5px; top: 160px"><a href="/">more coming soon... this is getting fuller and fuller!</a></p>
 </body>
