--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <p style="position: absolute; left: 5px; top: 115px"><a href="/Encourage/">get encouraged!</a></p>
 <p style="position: absolute; left: 5px; top: 130px"><a href="/presentin/">presenting time</a></p>
 <p style="position: absolute; left: 5px; top: 145px"><a href="/presentation/">unfinished presenting thing.</a></p>
-<p style="position: absolute; left: 5px; top: 160px"><a href="/edit+/">Edit+ Playground!</a></p>
+<p style="position: absolute; left: 5px; top: 160px"><a href="/Edit+/">Edit+ Playground!</a></p>
 <p style="position: absolute; left: 5px; top: 175px"><a href="/">more coming soon... this is getting fuller and fuller!</a></p>
 </body>
