--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <p style="position: absolute; left: 5px; top: 130px"><a href="/presentin/">presenting time</a></p>
 <p style="position: absolute; left: 5px; top: 145px"><a href="/presentation/">unfinished presenting thing.</a></p>
 <p style="position: absolute; left: 5px; top: 160px"><a href="/Edit+/">Edit+ Playground!</a></p>
-<p style="position: absolute; left: 5px; top: 175px"><a href="/">more coming soon... this is getting fuller and fuller!</a></p>
+<p style="position: absolute; left: 5px; top: 175px"><a href="/platformer/">platformer test v0.1</a></p>
+<p style="position: absolute; left: 5px; top: 190px"><a href="/">more coming soon... this is getting fuller and fuller!</a></p>
 </body>
