--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 <title>rdgfb's website</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,3 +18,4 @@
 <p style="position: absolute; left: 5px; top: 175px"><a href="/platformer/">platformer test v0.1</a></p>
 <p style="position: absolute; left: 5px; top: 190px"><a href="/">more coming soon... this is getting fuller and fuller!</a></p>
 </body>
+</html>
