--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -2235,7 +2235,7 @@ function buttonpress(){
             if (dimension==0 && presses<16){
             presses+=1;
             totalpresses+=1
-            mxppts+=((1*mxpmul)*(ascxp+1))
+            mxppts+=((1*mxpmul)*(ascXP+1))
             } else if (dimension==1){
             antipresses+=apress;
             totalantipresses+=1
