another hotfix for another thing (forgot function)

--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -3951,6 +3951,10 @@ document.getElementById("easyantichal").style="position: relative; opacity: 1; l
 }
 }
 }
+function chal0(){
+challenge=0
+prestige()
+shop()
 function chal1(){
 challenge=1
 prestige()
