fix fix fix fix fix fix

--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -2212,6 +2212,7 @@ var byebye = setInterval(function(){
     updateAutoSave()
     updateLevelandAuto()
     updatePressing()
+    checkChallenge()
     if (challenge!==0){
     updateChallenge()
     }
